@@ -6,6 +6,7 @@ autoheader
 automake -a
 automake
 # Change ./configure options if needed
-./configure --with-mysql --prefix=/home/zabbix/zabbix
+./configure --enable-server --with-mysql --prefix=/home/zabbix/zabbix
+#./configure --prefix=/home/zabbix/zabbix
 make
 make install
