@@ -1,6 +1,6 @@
 if SERVER
-	DIRS = libs zabbix_agent zabbix_get zabbix_sender zabbix_server
-else
-	DIRS = libs zabbix_agent zabbix_get zabbix_sender
-endif
+DIRS = libs zabbix_agent zabbix_get zabbix_sender zabbix_server
+else !SERVER
+DIRS = libs zabbix_agent zabbix_get zabbix_sender
+endif !SERVER
 SUBDIRS = $(DIRS)
