@@ -1,1 +1,6 @@
-SUBDIRS = zbxlog zbxcrypto zbxpid zbxnet zbxconf zbxdbhigh zbxemail zbxsysinfo zbxcommon
+if SERVER
+DIRS = zbxlog zbxcrypto zbxpid zbxnet zbxconf zbxdbhigh zbxemail zbxsysinfo zbxcommon
+else !SERVER
+DIRS = zbxlog zbxcrypto zbxpid zbxnet zbxconf zbxemail zbxsysinfo zbxcommon
+endif !SERVER
+SUBDIRS=$(DIRS)
